--- a/index.html
+++ b/index.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOJA KHE</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>Lista de Compras - LOJA KHE</h1>
 
     <section>
-        <h2>Cadastro de Nova Pessoa</h2>
-        <form id="formPessoa">
-            <input type="text" id="nomePessoa" placeholder="Nome da pessoa" required>
-            <button type="submit">Cadastrar Pessoa</button>
-        </form>
+      <h2>Cadastro de Nova Pessoa</h2>
+      <form id="formPessoa">
+        <input
+          type="text"
+          id="nomePessoa"
+          placeholder="Nome da pessoa"
+          required
+        />
+        <button type="submit">Cadastrar Pessoa</button>
+      </form>
     </section>
 
     <section>
-        <h2>Cadastro de Novo Produto</h2>
-        <form id="formProduto">
-            <input type="text" id="nomeProduto" placeholder="Nome do produto" required>
-            <input type="number" id="precoProduto" placeholder="Preço (R$)" min="0" step="0.01" required>
-            <button type="submit">Cadastrar Produto</button>
-        </form>
+      <h2>Cadastro de Novo Produto</h2>
+      <form id="formProduto">
+        <input
+          type="text"
+          id="nomeProduto"
+          placeholder="Nome do produto"
+          required
+        />
+        <input
+          type="number"
+          id="precoProduto"
+          placeholder="Preço (R$)"
+          min="0"
+          step="0.01"
+          required
+        />
+        <button type="submit">Cadastrar Produto</button>
+      </form>
     </section>
 
     <section>
-        <h2>Pessoas Cadastradas</h2>
-        <ul id="listaPessoas"></ul>
+      <h2>Comprar produto</h2>
+      <form id="formComprarProduto">
+        <select name="selectPessoas" id="selectPessoas" required></select>
+        <select name="selectProdutos" id="selectProdutos" required></select>
+        <button type="submit">Comprar Produto</button>
+      </form>
     </section>
 
     <section>
-        <h2>Produtos Cadastrados</h2>
-        <ul id="listaProdutos"></ul>
+      <h2>Pessoas Cadastradas</h2>
+      <ul id="listaPessoas"></ul>
+    </section>
+
+    <section>
+      <h2>Produtos Cadastrados</h2>
+      <ul id="listaProdutos"></ul>
     </section>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
