--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
     </section>
 
     <script src="main.js"></script>
+    <footer>
+        <p>Criado por: Kauã G.O Silva, Hugo Renato Alonso Camargo Penteado e Érick Rosdachimo Ribeiro</p>
+    </footer>
   </body>
 </html>
